<PreferenceScreen
    
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="sync"
            app:title="@string/sync_title" />


    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notifications_header">

        <com.github.xiorcal.birnot.TimePickerPreference
            app:dependency="sync"
            app:key="notification_time"
            app:layout="@layout/time_picker_layout"
            app:selectable="true" />

        <SwitchPreferenceCompat
            app:dependency="notification_time"
            app:iconSpaceReserved="false"
            app:key="notification"
            app:title="@string/notification_title" />

        <SwitchPreferenceCompat
            app:dependency="notification"
            app:iconSpaceReserved="false"
            app:key="notification_empty"
            app:summary="@string/notification_empty_desc"
            app:title="@string/notification_empty" />
    </PreferenceCategory>
</PreferenceScreen>